# lab2

lab2/: CMakeLists.txt  main.cpp
lab2/UI/: menu.cpp  menu.h
lab2/definitions/: definitions.h
lab2/modules/: array-manipulation.cpp  array-manipulation.h  basic-functions.cpp  basic-functions.h
lab2/structs/: struct.h
lab2/tests/: tests.cpp  tests.h
